--- a/README.me
+++ b/README.me
@@ -2,8 +2,10 @@
 
 Meu nome é Giovanna Santos, faço faculdade de Análise e Desenvolvimento de Sistemas e atuo como Desenvolvedora Front-End desde 2020. 👩🏾‍💻
 
- *"Conhecimento é poder. *📚*
-    - Thomas Hobbes"*
+ 
+
+> *"Conhecimento é poder. *📚*
+>     - Thomas Hobbes"*
 
 
 
@@ -14,4 +16,4 @@ Meu nome é Giovanna Santos, faço faculdade de Análise e Desenvolvimento de Si
 
 ## Redes Sociais 🌎
 
-![LinkedIn Badge](https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white&link=https://www.linkedin.com/in/gvns7/)
+![LinkedIn Badge](https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white&link=[https://www.linkedin.com/in/gvns7/](https://www.linkedin.com/in/gvns7/))
